2008-11-25  Vincent Untz  <vuntz@gnome.org>

	* macros2/gnome-common.m4: add -DWNCK_DISABLE_DEPRECATED
	-DLIBSOUP_DISABLE_DEPRECATED to DISABLE_DEPRECATED

2008-09-22  Christian Persch  <chpe@gnome.org>

	=== Release 2.24.0 ===

	* Makefile.am:
	* configure.in: Version 2.24.0.

2007-12-21  Sven Herzberg  <herzi@gnome-de.org>

	Reviewed by: Christian Persch

	Abort when the first dependency fails. Fixes bug 469115.

	* macros2/gnome-autogen.sh: don't use the DIE variable anymore and
	abort on the first dependency failure

2007-06-08  Christian Persch  <chpe@gnome.org>

	* macros2/gnome-autogen.sh: Don't print extra newlines when /bin/sh
	isn't bash. Bug #130346.

2007-06-08  Christian Persch  <chpe@gnome.org>

	* macros2/gnome-autogen.sh: Don't print warning about missing
	arguments if we're not going to run configure. Bug #445584, patch by
	"Cygwin Ports maintainer" (yselkowitz%40users.sourceforge.net).

2007-06-06  Christian Persch  <chpe@gnome.org>

	* doc-build/gnome-doc-common.in: Add datarootdir substitution.

2007-04-09  Christian Persch  <chpe@gnome.org>

	* configure.in: Bump version to 2.19.0.

2007-04-09  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.0 ===

	* autogen.sh: Use automake 1.9.
	* configure.in: Bump version. Dist as .tar.bz2.

2007-01-29  Mariano Suárez-Alvarez  <mariano@gnome.org>

	Bug 377185 – Hide cmp output in autogen.sh

	* macros2/gnome-autogen.sh: Do not show cmp's output.

2007-01-29  Christian Persch  <chpe@svn.gnome.org>

    	* Add -Wno-portability to automake invocation. Bug #529120, patch by Philip
	Van Hoof.

2007-01-29  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-compiler-flags.m4:
	Fix --enable-cxx-warnings checks. Bug #360693.

2007-01-12  Shaun McCance  <shaunm@gnome.org>

	* macros2/gnome-autogen.sh:
	- Fix for #377175 by skipping NO-AUTO-GEN directories, by Christian Persch

2007-01-11  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-autogen.sh: Default to AM 1.9. Bug #323868, patch by